# high_performanec_computing

./: .gitignore  ReadMe.txt  benchmark.cpp  contributors.txt
Assignment_1/: CMakeLists.txt
Assignment_1/include/: Example.h
Assignment_1/src/: Example.cpp  main.cpp
basic-opencl_wrapper_cpp/basic-opencl_wrapper_cpp/: CMakeLists.txt  add_one.cl  main.cpp
basic-opencl_wrapper_cpp/basic-opencl_wrapper_cpp/hdr/: cmdqueue.h  context.h  device.h  kernel.h  pexception.h  platform.h  program.h
basic-opencl_wrapper_cpp/basic-opencl_wrapper_cpp/kernels/: add_one.cl  matrix_multiplication.cl  matrix_transpose.cl
basic-opencl_wrapper_cpp/basic-opencl_wrapper_cpp/src/: cmdqueue.cpp  context.cpp  device.cpp  kernel.cpp  platform.cpp  program.cpp
basic-opencl_wrapper_cpp/basic-opencl_wrapper_cpp/utility/: cmdutility.h  dbg.h  matrix.h  opencl-common.hpp
